syntax = "proto3";

package WalletService;

service WalletService{
    rpc CreateWallet (User) returns (Wallet) {}
    rpc depositWallet(DepositInput) returns (DepositResponse){}
    rpc transferFund(TransferInput) returns (TransferResponse){}
}

message User {
    string id = 1;
}

message Wallet {
    string id = 1;
    string userId = 2;
    int32 balance = 3;
}

message DepositInput {
    string walletId = 1;
    int32 amount = 2;
    string currency = 3;
}

message DepositResponse {
    int32 status = 1;
    repeated string error = 2;
}

message TransferInput {
    string fromId = 1;
    string toId = 2;
    int32 amount = 3;
    string currency = 4;
}

message TransferResponse {
    int32 status = 1;
    repeated string error = 2;
}



